samples/_failures_safe/1761541111_61d011_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8982fef.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e8982fef.c:181:13: error: expected declaration or statement at end of input
  181 |             printf("Vertex %d: %d\n", i, dist[i]);
      |             ^~~~~~
./samples/SAFE/__tmp_e8982fef.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e8982fef.c:181:13: error: expected declaration or statement at end of input
